--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -1,272 +1,23 @@
+# Homebrew install commands:
 # brew install helm
 # helm plugin install https://github.com/databus23/helm-diff
 # brew install helmfile
+
+# Apply commands:
 # helmfile apply
 
-repositories:
-  - name: longhorn
-    url: https://charts.longhorn.io
-  - name: metallb
-    url: https://metallb.github.io/metallb
-  - name: uptime-kuma
-    url: https://dirsigler.github.io/uptime-kuma-helm
-  # - name: mojo2600
-  #   url: https://mojo2600.github.io/pihole-kubernetes
-  - name: ingress-nginx
-    url: https://kubernetes.github.io/ingress-nginx
-  - name: bitnami
-    url: https://charts.bitnami.com/bitnami
-  - name: jetstack            	
-    url: https://charts.jetstack.io                        
-  - name: nextcloud           	
-    url: https://nextcloud.github.io/helm/                 
-  - name: vaultwarden         	
-    url: https://guerzon.github.io/vaultwarden
-  - name: metrics-server
-    url: https://kubernetes-sigs.github.io/metrics-server
-  - name: cluster-status-app
-    url: https://vizzletf.github.io/cluster-status-app
-  - name: emberstack
-    url: https://emberstack.github.io/helm-charts
-  - name: bitnami-keycloak
-    url: https://charts.bitnami.com/bitnami
-  - name: bedag
-    url: https://bedag.github.io/helm-charts/
-  - name: crossplane-stable
-    url: https://charts.crossplane.io/stable
-  - name: jaconi
-    url: https://charts.jaconi.io
-  # - name: k8s-at-home
-  #   url: https://k8s-at-home.com/charts/
-  # - name: seaweedfs
-  #   url: https://seaweedfs.github.io/seaweedfs/helm
-  # - name: seaweedfs-csi-driver
-  #   url: https://seaweedfs.github.io/seaweedfs-csi-driver/helm
-  # - name: prometheus-community	
-  #   url: https://prometheus-community.github.io/helm-charts
-  # - name: grafana             	
-  #   url: https://grafana.github.io/helm-charts             
-  # - name: vm                  	
-  #   url: https://victoriametrics.github.io/helm-charts
-  # - name: ollama
-  #   url: https://otwld.github.io/ollama-helm
-  # - name: open-webui
-  #   url: https://helm.openwebui.com/
-  # - name: pajikos 
-  #   url: http://pajikos.github.io/home-assistant-helm-chart   
+# Modular helmfile structure
+bases:
+  - helmfiles/repositories.yaml
+  - helmfiles/defaults.yaml
 
----
-releases:
-  # Kubernetes Reflector for secret/configmap replication
-  - name: reflector
-    namespace: kube-system
-    chart: emberstack/reflector
-    version: 7.1.288
-
-  # Distributed storage
-  # ssh root@all_nodes yum install iscsi-initiator-utils lsscsi -y
-  - name: longhorn
-    namespace: longhorn-system
-    chart: longhorn/longhorn
-    version: 1.9.0
-    values:
-      - ./values/longhorn.values.yaml
-
-  - name: metallb
-    chart: metallb/metallb
-    namespace: metallb-system
-    version: 0.15.2
-
-  - name: ingress-nginx
-    chart: ingress-nginx/ingress-nginx
-    namespace: ingress-nginx
-    version: 4.12.3
-    values:
-      - ./values/ingress-nginx.values.yaml
+# Ordered deployment of services
+helmfiles:
+  - path: ./helmfiles/infrastructure.yaml 
+  - path: ./helmfiles/network.yaml
+  - path: ./helmfiles/security.yaml
+  - path: ./helmfiles/gitops.yaml
+  - path: ./helmfiles/applications.yaml
   
-  - name: cert-manager
-    namespace: cert-manager
-    chart: jetstack/cert-manager
-    version: v1.17.2
-    values:
-      - ./values/cert-manager.values.yaml
-  # Automatic DNS for Cloudflare
-  - name: external-dns
-    namespace: external-dns
-    chart: bitnami/external-dns
-    version: 8.8.4
-    values:
-      - ./values/externaldns.values.yaml
-
-  - name: vaultwarden
-    namespace: vaultwarden
-    chart: vaultwarden/vaultwarden
-    version: 0.32.1
-    values:
-      - ./values/vaultwarden.values.yaml
-
-  - name: nextcloud
-    namespace: nextcloud
-    chart: nextcloud/nextcloud
-    version: 6.6.10
-    values:
-      - ./values/nextcloud.values.yaml
-
-  - name: metrics-server
-    namespace: kube-system
-    chart: metrics-server/metrics-server
-    version: 3.12.2
-    values:
-      - ./values/metrics-server.values.yaml
-
-  - name: cluster-status-app
-    namespace: cluster-status
-    chart: cluster-status-app/cluster-status-app
-    version: 0.4.4
-    values:
-      - ./values/cluster-status-app.values.yaml
-
-  - name: keycloak-secret
-    namespace: keycloak
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/keycloak/secret.yaml
-
-  - name: keycloak-ingress
-    namespace: keycloak
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/keycloak/ingress.yaml
-
-  - name: keycloak
-    namespace: keycloak
-    chart: bitnami-keycloak/keycloak
-    version: 24.7.3
-    values:
-      - ./values/keycloak.values.yaml
-    needs:
-      - keycloak-secret
-
-  - name: crossplane
-    namespace: crossplane-system
-    chart: crossplane-stable/crossplane
-    version: 1.20.0
-    values:
-      - ./values/crossplane.values.yaml
-
-  - name: crossplane-keycloak-provider
-    namespace: crossplane-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/crossplane/keycloak-provider.yaml
-    needs:
-      - crossplane
-
-  - name: crossplane-keycloak-provider-config
-    namespace: crossplane-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/crossplane/keycloak-provider-config.yaml
-    needs:
-      - crossplane-keycloak-provider
-
-  # pihole
-  - name: pihole-secret
-    namespace: pihole-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/pihole/secret.yaml
-
-  - name: pihole-externaldns-rbac
-    namespace: pihole-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/pihole/externaldns-rbac.yaml
-
-  - name: pihole-externaldns
-    namespace: pihole-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../manifests/pihole/externaldns.yaml
-    needs:
-      - pihole-secret
-      - pihole-externaldns-rbac
-
-  - name: pihole
-    namespace: pihole-system
-    chart: mojo2600/pihole
-    version: 2.31.0
-    values:
-      - ./values/pihole.values.yaml
-    needs:
-      - pihole-secret
-
-  # - name: uptime-kuma
-  #   namespace: uptime-kuma
-  #   chart: uptime-kuma/uptime-kuma
-  #   version: 2.21.3
-  #   values:
-  #     - ./values/uptime-kuma.values.yaml
-
-  # - name: torrserver
-  #   namespace: torrserver
-  #   chart: k8s-at-home/torrserver
-  #   version: 1.2.2
-  #   values:
-  #     - ./values/torrserver.values.yaml
-
-  # - name: seaweedfs
-  #   namespace: seaweedfs
-  #   chart: seaweedfs/seaweedfs
-  #   version: 4.0.0
-  #   values:
-  #     - ./values/seaweedfs.values.yaml
-  
-  # - name: seaweedfs-csi-driver
-  #   namespace: seaweedfs
-  #   chart: seaweedfs-csi-driver/seaweedfs-csi-driver
-  #   version: 0.2.2
-  #   values:
-  #     - ./values/seaweedfs-csi-driver.values.yaml
-
-  # - name: prometheus
-  #   namespace: monitoring
-  #   chart: prometheus-community/prometheus
-  #   version: 25.26.0
-  #   values:
-  #     - ./values/prometheus.values.yaml
-
-  # - name: grafana
-  #   namespace: monitoring
-  #   chart: grafana/grafana
-  #   version: 8.4.5
-  #   values:
-  #     - ./values/grafana.values.yaml
-
-  # - name: ollama
-  #   namespace: ollama
-  #   chart: ollama/ollama
-  #   version: 0.54.0
-  #   values:
-  #     - ./values/ollama.values.yaml
-  
-  # - name: open-webui
-  #   namespace: open-webui
-  #   chart: open-webui/open-webui
-  #   version: 3.1.7
-  #   values:
-  #     - ./values/open-webui.values.yaml
-
-  # - name: home-assistant
-  #   namespace: home-assistant
-  #   chart: pajikos/home-assistant
-  #   version: 0.2.74
-  #   values:
-  #     - ./values/home-assistant.values.yaml
+  # Uncomment to deploy experimental/optional services:
+  # - path: ./helmfiles/not_used.yaml
