--- a/helm/helmfiles/repositories.yaml
+++ b/helm/helmfiles/repositories.yaml
@@ -28,4 +28,10 @@ repositories:
   - name: crossplane-stable
     url: https://charts.crossplane.io/stable
   - name: mojo2600
-    url: https://mojo2600.github.io/pihole-kubernetes 
+    url: https://mojo2600.github.io/pihole-kubernetes
+  - name: crowdsec
+    url: https://crowdsecurity.github.io/helm-charts
+  - name: haproxytech
+    url: https://haproxytech.github.io/helm-charts
+  - name: community-charts
+    url: https://community-charts.github.io/helm-charts 
