--- a/helm/helmfiles/security.yaml
+++ b/helm/helmfiles/security.yaml
@@ -25,4 +25,31 @@ releases:
     values:
       - ../values/security/keycloak.values.yaml
     needs:
-      - keycloak-secret 
+      - keycloak-secret
+
+  # CrowdSec Security Engine
+  - name: crowdsec-secret
+    namespace: crowdsec
+    chart: bedag/raw
+    version: 2.0.0
+    values:
+      - ../../manifests/crowdsec/secret.yaml
+
+  - name: crowdsec
+    namespace: crowdsec
+    chart: crowdsec/crowdsec
+    version: 0.19.3
+    values:
+      - ../values/security/crowdsec.values.yaml
+    needs:
+      - crowdsec-secret
+  
+  # - name: ingress-nginx
+  #   namespace: ingress-nginx
+  #   chart: ingress-nginx/ingress-nginx
+  #   version: 4.12.3
+  #   values:
+  #     - ../values/network/ingress-nginx.values.yaml
+  #     - ../values/security/crowdsec-ingress-nginx.yaml
+  #   needs:
+  #     - crowdsec/crowdsec 
