chore(helm): update chart versions and add CouchDB configuration
- Bumped versions for vaultwarden, nextcloud, longhorn, ingress-nginx, cert-manager, and metrics-server.
- Added CouchDB deployment configuration to applications.yaml.
- Introduced example values file for CouchDB configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ manifests/crowdsec/notification-telegram.yaml
 
 # Helm values with passwords
 helm/values/applications/nextcloud.values.yaml.gotmpl
+helm/values/applications/couchdb.values.yaml.gotmpl
 helm/values/security/keycloak.values.yaml
 
 # Any other secret files (but not examples)
