--- a/helm/helmfiles/infrastructure.yaml
+++ b/helm/helmfiles/infrastructure.yaml
@@ -3,18 +3,24 @@ bases:
   - defaults.yaml
 
 releases:
+  # CloudNative-PG Operator for PostgreSQL management
+  - name: cloudnative-pg
+    namespace: cnpg-system
+    chart: cnpg/cloudnative-pg
+    version: 0.25.0
+
   # Kubernetes Reflector for secret/configmap replication
   - name: reflector
     namespace: kube-system
     chart: emberstack/reflector
-    version: 7.1.288
+    version: 9.1.22
 
   # Distributed storage
   # ssh root@all_nodes yum install iscsi-initiator-utils lsscsi -y
   - name: longhorn
     namespace: longhorn-system
     chart: longhorn/longhorn
-    version: 1.9.0
+    version: 1.9.1
     values:
       - ../values/infrastructure/longhorn.values.yaml
 
@@ -27,20 +33,20 @@ releases:
   - name: ingress-nginx
     namespace: ingress-nginx
     chart: ingress-nginx/ingress-nginx
-    version: 4.12.3
+    version: 4.13.0
     values:
       - ../values/network/ingress-nginx.values.yaml
   
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
-    version: v1.17.2
+    version: v1.18.2
     values:
       - ../values/infrastructure/cert-manager.values.yaml
 
   - name: metrics-server
     namespace: kube-system
     chart: metrics-server/metrics-server
-    version: 3.12.2
+    version: 3.13.0
     values:
       - ../values/infrastructure/metrics-server.values.yaml 
