--- a/helm/helmfiles/gitops.yaml
+++ b/helm/helmfiles/gitops.yaml
@@ -3,28 +3,37 @@ bases:
   - defaults.yaml
 
 releases:
-  # Crossplane for Infrastructure as Code
-  - name: crossplane
-    namespace: crossplane-system
-    chart: crossplane-stable/crossplane
-    version: 1.20.0
+  - name: argocd
+    namespace: argocd
+    chart: argo/argo-cd
+    version: 8.3.0
     values:
-      - ../values/gitops/crossplane.values.yaml
+      - ../values/not_used/argocd.values.yaml
+  # # Crossplane for Infrastructure as Code
+  # - name: crossplane
+  #   namespace: crossplane-system
+  #   chart: crossplane-stable/crossplane
+  #   version: 1.20.0
+  #   values:
+  #     - ../values/gitops/crossplane.values.yaml
+  #   installed: false
 
-  - name: crossplane-keycloak-provider
-    namespace: crossplane-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../../manifests/crossplane/keycloak-provider.yaml
-    needs:
-      - crossplane
+  # - name: crossplane-keycloak-provider
+  #   namespace: crossplane-system
+  #   chart: bedag/raw
+  #   version: 2.0.0
+  #   values:
+  #     - ../../manifests/crossplane/keycloak-provider.yaml
+  #   needs:
+  #     - crossplane
+  #   installed: false
 
-  - name: crossplane-keycloak-provider-config
-    namespace: crossplane-system
-    chart: bedag/raw
-    version: 2.0.0
-    values:
-      - ../../manifests/crossplane/keycloak-provider-config.yaml
-    needs:
-      - crossplane-keycloak-provider 
+  # - name: crossplane-keycloak-provider-config
+  #   namespace: crossplane-system
+  #   chart: bedag/raw
+  #   version: 2.0.0
+  #   values:
+  #     - ../../manifests/crossplane/keycloak-provider-config.yaml
+  #   needs:
+  #     - crossplane-keycloak-provider
+  #   installed: false
