--- a/manifests/proxy/endpoint.yaml
+++ b/manifests/proxy/endpoint.yaml
@@ -3,6 +3,10 @@ kind: Endpoints
 metadata:
   namespace: homeassistant
   name: homeassistant
+  labels:
+    app.kubernetes.io/managed-by: argocd
+    app.kubernetes.io/name: homeassistant-proxy
+    app.kubernetes.io/instance: homeassistant
 subsets:
 - addresses:
   - ip: 10.11.12.101
