feat(vault): add initial Vault Helm chart and ArgoCD applications
This commit introduces the Vault Helm chart along with ArgoCD application configurations for deploying Vault and Vault unseal services in a Kubernetes cluster. The chart includes templates for various Kubernetes resources such as deployments, services, configmaps, and RBAC configurations needed for Vault operation.

The ArgoCD applications are configured to deploy Vault from the Helm chart and Vault unseal service from an external chart repository. The setup includes automated sync policies with self-healing capabilities and namespace creation.

The Helm chart follows HashiCorp's official Vault Helm chart structure with customizations for OpenShift compatibility and includes all necessary components for running Vault in various modes (standalone, HA, external). The chart is configured with proper security contexts, network policies, and service accounts following Kubernetes best practices.

--- a/argocd/applications/vault-application.yaml
+++ b/argocd/applications/vault-application.yaml
@@ -1,25 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: reflector
+  name: vault
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   sources:
-    - repoURL: https://emberstack.github.io/helm-charts
-      chart: reflector
-      targetRevision: 9.1.26
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      path: charts/vault
+      targetRevision: HEAD
       helm:
         valueFiles:
-          - $values/infrastructure/reflector.yaml
+          - $values/applications/vault.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
   destination:
     server: https://kubernetes.default.svc
-    namespace: reflector
+    namespace: vault
   syncPolicy:
     automated:
       prune: true
@@ -27,3 +27,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
