--- a/argocd/applications/vault-unseal-application.yaml
+++ b/argocd/applications/vault-unseal-application.yaml
@@ -1,25 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: reflector
+  name: vault-unseal
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   sources:
-    - repoURL: https://emberstack.github.io/helm-charts
-      chart: reflector
-      targetRevision: 9.1.26
+    - repoURL: https://babykart.github.io/vault-unseal
+      chart: vault-unseal
+      targetRevision: 0.10.0
       helm:
         valueFiles:
-          - $values/infrastructure/reflector.yaml
+          - $values/applications/vault-unseal.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
   destination:
     server: https://kubernetes.default.svc
-    namespace: reflector
+    namespace: vault
   syncPolicy:
     automated:
       prune: true
@@ -27,3 +27,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
