chore(argocd): update helm chart target revisions to use latest versions
Update targetRevision from specific versions to "*" for all ArgoCD applications to always use the latest chart versions. Add new cilium application configuration.

--- a/argocd/applications/cluster-status-app-application.yaml
+++ b/argocd/applications/cluster-status-app-application.yaml
@@ -10,7 +10,7 @@ spec:
   sources:
     - repoURL: https://vizzletf.github.io/cluster-status-app
       chart: cluster-status-app
-      targetRevision: 0.4.4
+      targetRevision: "*"
       helm:
         valueFiles:
           - $values/applications/cluster-status-app.yaml
