--- a/argocd/infrastructure/longhorn-application.yaml
+++ b/argocd/infrastructure/longhorn-application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   sources:
     - repoURL: https://charts.longhorn.io
-      targetRevision: 1.9.1
+      targetRevision: "*"
       chart: longhorn
       helm:
         valueFiles:
