--- a/argocd/infrastructure/metrics-server-application.yaml
+++ b/argocd/infrastructure/metrics-server-application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   sources:
     - repoURL: https://kubernetes-sigs.github.io/metrics-server/
-      targetRevision: 3.13.0
+      targetRevision: "*"
       chart: metrics-server
       helm:
         valueFiles:
