--- a/argocd/infrastructure/metallb-application.yaml
+++ b/argocd/infrastructure/metallb-application.yaml
@@ -15,6 +15,9 @@ spec:
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      path: manifests/metallb
+      targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: metallb-system
