--- a/argocd/applications/homeassistant-proxy-application.yaml
+++ b/argocd/applications/homeassistant-proxy-application.yaml
@@ -22,6 +22,7 @@ spec:
       - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - PruneLast=true
+      - RespectIgnoreDifferences=true
     retry:
       limit: 5
       backoff:
