--- a/argocd/applications/cluster-status-app-application.yaml
+++ b/argocd/applications/cluster-status-app-application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-status-app
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
