--- a/argocd/applications/n8n-application.yaml
+++ b/argocd/applications/n8n-application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: n8n
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
