--- a/argocd/applications/vaultwarden-application.yaml
+++ b/argocd/applications/vaultwarden-application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: vaultwarden
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
