--- a/argocd/infrastructure/cilium-application.yaml
+++ b/argocd/infrastructure/cilium-application.yaml
@@ -17,6 +17,9 @@ spec:
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      path: manifests/cilium
+      targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
