--- a/ansible/inventory/inventory.yaml
+++ b/ansible/inventory/inventory.yaml
@@ -1,17 +1,5 @@
 "all":
   "children":
-    "common-db":
-      "hosts":
-        "patroni-etcd-01": {}
-        "patroni-postgres-01": {}
-        "patroni-postgres-02": {}
-    "common-etcd":
-      "hosts":
-        "patroni-etcd-01": {}
-    "common-patroni":
-      "hosts":
-        "patroni-postgres-01": {}
-        "patroni-postgres-02": {}
     "etcd":
       "hosts":
         "kube-node-01": {}
@@ -31,15 +19,14 @@
         "kube-node-02": {}
         "kube-node-03": {}
         "kube-node-04": {}
+        "kube-node-05": {}
     "oracle_linux":
       "hosts":
         "kube-node-01": {}
         "kube-node-02": {}
         "kube-node-03": {}
         "kube-node-04": {}
-        "patroni-etcd-01": {}
-        "patroni-postgres-01": {}
-        "patroni-postgres-02": {}
+        "kube-node-05": {}
   "hosts":
     "kube-node-01":
       "access_ip": "10.11.12.241"
@@ -61,19 +48,8 @@
       "ansible_host": "10.11.12.145"
       "ansible_user": "root"
       "ip": "10.11.12.145"
-    "patroni-etcd-01":
-      "access_ip": "10.11.12.246"
-      "ansible_host": "10.11.12.246"
+    "kube-node-05":
+      "access_ip": "10.11.12.146"
+      "ansible_host": "10.11.12.146"
       "ansible_user": "root"
-      "ip": "10.11.12.246"
-    "patroni-postgres-01":
-      "access_ip": "10.11.12.247"
-      "ansible_host": "10.11.12.247"
-      "ansible_user": "root"
-      "ip": "10.11.12.247"
-    "patroni-postgres-02":
-      "access_ip": "10.11.12.245"
-      "ansible_host": "10.11.12.245"
-      "ansible_user": "root"
-      "ip": "10.11.12.245"
-      
+      "ip": "10.11.12.146"
